logs/watchdog_20251011_2130.log
[11/10/2025 21:30:01,66] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 21:30:01,89] END WATCHDOG 
